ref: 의존성 jar 출력 기능 spring.custom:common 으로 이동